--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -13,12 +13,13 @@
   left: 50%;
   width: 100%;
   // width: 500px;
-  min-height: 500px;
+  max-height: 500px;
   background-color: #ffffff;
   border-radius: 10px;
   transform: translate(-50%, -50%) rotate(0) scale(1);
   transition: transform 500ms linear;
   padding: 40px;
+  overflow: auto;
 
   @media screen and (min-width: 480px) {
     width: 448px;
@@ -26,6 +27,8 @@
 
   @media screen and (min-width: 1200px) {
     width: 720px;
+    min-height: 500px;
+    max-height: none;
   }
 
   .backdrop.is-hidden & {
@@ -35,8 +38,8 @@
 
 .modal__close-btn {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 40px;
+  right: 40px;
   border-radius: 50%;
   width: 30px;
   height: 30px;
