--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  z-index: 0;
   position: absolute;
   top: 0;
   left: 0;
@@ -113,7 +114,7 @@
 
 .mobile-btn {
   position: relative;
-  z-index: 9999;
+  z-index: 10;
   display: block;
   background-color: transparent;
   border: none;
